iframe styling scrolling visible to prevent double scrollbars

--- a/index.css
+++ b/index.css
@@ -36,6 +36,7 @@
 
 .frame {
   float: left;
+  overflow: visible;
 }
 
 @media (max-width: 900px) {
